@@ -2,7 +2,14 @@ TurnServer
 ==========
 
 TurnServer is an OpenSource implementation of Traversal Using Relays around NAT (TURN). 
-The connection to the server can be  UDP, TCP or TLS over TCP. It also supports STUN Binding method.
+It aims to be compliant with RFC5389 (STUN) and latest TURN draft.
+
+TURN clients can connect to TurnServer with the following protocols: UDP, TCP and TLS over TCP.
+For the moment relaying messages can only be done with UDP protocol.
+
+TurnServer is known to work on the following systems:
+- GNU/Linux 2.6;
+- FreeBSD 7.0.
 
 1) Build / install
 ------------------
@@ -12,11 +19,14 @@ TurnServer requires some libraries:
 - libssl development files;
 - librt (normally included with Linux and *BSD).
 
-TurnServer is written in pure C according to the C99 and POSIX + XSI standards. Thus it should be compiled on all POSIX systems which have realtime signals support.
+TurnServer is written in pure C according to the C99 and POSIX + XSI standards. Thus it 
+should be compiled on all POSIX systems which have realtime signals support.
 
-Note for *BSD users, install the required libconfuse ports in /usr/ prefix, otherwise you have to set the PKG_CONFIG_PATH variable or make symlinks before running ./configure (i.e. ln -sf /usr/local/lib/libconfuse.so /usr/lib/ && ln -sf /usr/local/include/confuse.h /usr/include/). 
+Note for *BSD users, install the required libconfuse ports in /usr/ prefix, otherwise you 
+have to set the PKG_CONFIG_PATH variable or make symlinks before running ./configure script:
+# ln -sf /usr/local/lib/libconfuse.so /usr/lib/ && ln -sf /usr/local/include/confuse.h /usr/include/
 
-Type the following commands: 
+To build TurnServer, run following commands: 
 $ aclocal
 $ autoheader
 $ autoconf 
@@ -25,28 +35,45 @@ $ ./configure
 $ make
 # make install
 
-You have to set a configuration file (see next section) before launching the server.
+You have to set a configuration file and accounts database file (see next sections) before 
+launching the server.
 
-Now you can launch the server: 
+Launch the server: 
 $ turnserver -c /path/to/config/file
 
-TurnServer is known to work on the following systems:
-- GNU/Linux 2.6;
-- FreeBSD 7.0.
+To build doxygen documentation:
+$ doxygen Doxyfile
+
+The documentation will be generated in doc/html/ directory.
 
 2) Configuration file
 ---------------------
 
-In extra/ directory you will find a configuratin template file (turnserver.conf.template). Change settings according to your environment.
+In extra/ directory you will find a configuration template file (turnserver.conf.template). 
+Change settings according to your environment.
 
-To authenticate the users, TurnServer uses (for the moment) a basic text file. The pathname can be configured with "account_file" parameter
-in turnserver.conf file.
+Important parameters are: 
+- listen_address: public IPv4 address;
+- listen_addressv6: public IPv6 address;
+- realm: realm (i.e. domain.org) of the server;
+- account_file: specify the location of the accounts database file;
+- tcp_port and udp_port: bind the service on the specified port;
+
+If you want to use TLS over TCP you have to set "tls = true" in the configuration file as 
+well as the pathnames of the Certificate Authority (CA), server certificate and associated
+private key.
+
+Other parameters such as allocations number quota can be configured. For more details about 
+configuration parameters, see man files:
+$ man turnserver.conf 
+
+3) Accounts database file
+--------------------------
+
+TurnServer uses (for the moment) a basic text file which contains accounts information.
 
 The format of each line is:
-login:password:domain.org
+login:password:realm
 
-If you want to use TLS over TCP you have to set "tls = true" in the configuration file as well as the pathnames of the Certificate Authority (CA), server certificate and associated private key.
-
-Other parameters such as allocations number quota can be configured. For more details about configuration parameters, type:
-$ man turnserver.conf 
+Note: realm have to match realm parameter defined in TurnServer configuration file.
 
