@@ -27,9 +27,6 @@ realm = "domain.org"
 ## Daemon mode.
 daemon = false
 
-## Max client.
-max_client = 10
-
 ## Max relay per username.
 max_relay_per_username = 5 
 
