@@ -1,4 +1,4 @@
-.TH TURNSERVER 1 "November 2, 2008" "TurnServer"
+.TH TURNSERVER 1 "November 14, 2008" "TurnServer"
 
 .SH NAME
 turnserver  - TURN server implementation
@@ -10,8 +10,7 @@ turnserver  - TURN server implementation
 .SH DESCRIPTION
 TurnServer is an implementation of Traversal Using Relays around NATs (TURN) protocol. This protocol allows a client to obtain IP addresses and ports from such a relay.
 It is most useful for elements behind symmetric NATs or firewalls that wish to be on the receiving end of a connection to a single peer.
-.br
-TurnServer offers also the possiblity to allocate an IPv6 address to IPv4 TURN client and vice-versa.
+TurnServer offers also the possibility to allocate an IPv6 address to IPv4 TURN client and vice-versa.
 .br
 .br
 
